--- a/java/org/apache/catalina/core/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/core/LocalStrings_fr.properties
@@ -266,7 +266,7 @@ standardHost.notContext=Le fils d'un hôte (child of a Host) doit être un conte
 standardHost.nullName=Le nom d'hôte est requis
 standardHost.problematicAppBase=Utiliser une chaîne vide pour l''appBase de l''hôte [{0}] la fera correspondre à CATALINA_BASE, ce qui causera des problèmes
 
-standardHostValue.customStatusFailed=La page d''erreur personnalisée [{0}] n''a pu être redirigée correctement
+standardHostValve.customStatusFailed=La page d''erreur personnalisée [{0}] n''a pu être redirigée correctement
 
 standardPipeline.basic.start=Erreur lors du démarrage de la nouvelle valve de base
 standardPipeline.basic.stop=Erreur lors de l'arrêt de l'ancienne valve de base
