--- a/java/org/apache/catalina/core/LocalStrings_zh_CN.properties
+++ b/java/org/apache/catalina/core/LocalStrings_zh_CN.properties
@@ -261,7 +261,7 @@ standardHost.notContext=主机的子节点必须有上下文
 standardHost.nullName=主机名是必需的
 standardHost.problematicAppBase=在主机[{0}]上为appBase使用空字符串会将其设置为CATALINA_BASE，这是一个坏主意
 
-standardHostValue.customStatusFailed=无法正确调度自定义错误页[{0}]
+standardHostValve.customStatusFailed=无法正确调度自定义错误页[{0}]
 
 standardPipeline.basic.start=启动新基本阀时出错
 standardPipeline.basic.stop=停止旧基本阀时出错
