--- a/java/org/apache/catalina/core/LocalStrings_ja.properties
+++ b/java/org/apache/catalina/core/LocalStrings_ja.properties
@@ -259,7 +259,7 @@ standardHost.nullName=ホスト名が必要です
 standardHost.problematicAppBase=ホスト [{0}] のappBaseに空の文字列を使用すると、CATALINA_BASEに設定されますが、これは悪い考えです
 standardHost.problematicLegacyAppBase=ホスト [{0}] のlegacyAppBaseに空の文字列を使用すると、CATALINA_BASEに設定されます。これは悪い考えです
 
-standardHostValue.customStatusFailed=カスタムエラーページ [{0}] を正しくディスパッチできませんでした
+standardHostValve.customStatusFailed=カスタムエラーページ [{0}] を正しくディスパッチできませんでした
 
 standardPipeline.basic.start=新しい基本 Valve を開始できません。
 standardPipeline.basic.stop=古い基本 Valve を停止できません。
