--- a/java/org/apache/catalina/core/LocalStrings_ko.properties
+++ b/java/org/apache/catalina/core/LocalStrings_ko.properties
@@ -244,7 +244,7 @@ standardHost.nullName=호스트 이름이 필수적입니다.
 standardHost.problematicAppBase=호스트 [{0}]에서 appBase를 위해 빈 문자열을 사용하는 것은, 결국 appBase를 CATALINA_BASE로 설정하게 되는데, 이는 좋은 생각이 아닙니다.
 standardHost.problematicLegacyAppBase=호스트 [{0}]에 legacyAppBase로 빈 문자열이 설정되어 있는데, 이는 CATALINA_BASE로 재설정 할 것입니다만, 이는 좋지 않은 설정 방법입니다.
 
-standardHostValue.customStatusFailed=커스텀 오류 페이지 [{0}]은(는) 올바르게 디스패치될 수 없었습니다.
+standardHostValve.customStatusFailed=커스텀 오류 페이지 [{0}]은(는) 올바르게 디스패치될 수 없었습니다.
 
 standardPipeline.basic.start=새로운 기본 Valve를 시작하는 중 오류 발생
 standardPipeline.basic.stop=이전 기본 Valve를 중지시키는 중 오류 발생
