Improvements to French translations. (remm)

--- a/java/org/apache/tomcat/util/net/openssl/panama/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/util/net/openssl/panama/LocalStrings_fr.properties
@@ -51,6 +51,8 @@ openssl.errMakeConf=Impossible de créer le contexte de OpenSSLConf
 openssl.errorAddingCertificate=Erreur lors de l''ajout du certificat à la chaîne: [{0}]
 openssl.errorConfiguringLocations=Erreur lors de la configuration des emplacements des certificats CA: [{0}]
 openssl.errorLoadingCertificate=Erreur lors du chargement du certificat: [{0}]
+openssl.errorLoadingCertificateRevocationListWithError=Erreur de chargement de la révocation des certificats [{0}] avec l''erreur [{1}]
+openssl.errorLoadingCertificateWithError=Erreur de chargement du certificat [{0}] avec l''erreur [{1}]
 openssl.errorLoadingPassword=Erreur lors du chargment du fichier mot de passe: [{0}]
 openssl.errorLoadingPrivateKey=Erreur lors du chargment de la clé privée: [{0}]
 openssl.errorPrivateKeyCheck=La clé privée ne correspond pas à la clé publique du certificat: [{0}]
