--- a/java/org/apache/tomcat/util/threads/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/util/threads/LocalStrings_fr.properties
@@ -19,3 +19,5 @@ threadPoolExecutor.invalidKeepAlive=Les threads principaux doivent avoir un temp
 threadPoolExecutor.queueFull=La file d'attente est pleine
 threadPoolExecutor.taskRejected=La tâche [{0}] a été rejetée par [{1}]
 threadPoolExecutor.threadStoppedToAvoidPotentialLeak=Arrêt du thread [{0}] pour éviter de potentielles fuites de mémoire après l''arrêt d''un contexte
+
+virtualThreadExecutor.taskRejected=La tâche [{0}] a été rejetée de [{1}]
