Improvements to Japanese translations by tak7iji

--- a/java/org/apache/tomcat/util/net/openssl/LocalStrings_ja.properties
+++ b/java/org/apache/tomcat/util/net/openssl/LocalStrings_ja.properties
@@ -49,8 +49,8 @@ openssl.errorSSLCtxInit=SSL コンテキスト初期化中のエラー
 openssl.keyManagerMissing=キーマネージャーが見つかりません。
 openssl.keyManagerMissing.warn=キーマネージャーが見つかりませんでした。 TLS は機能しますが、証明書は Tomcat からは認識されないため、この証明書に対して管理/監視機能は機能しません
 openssl.makeConf=OpenSSLConfコンテキストの作成
-openssl.nonJsseCertificate=証明書 [{0}] またはその秘密鍵 [{1}] は JSSE キーマネージャを用いて処理することができませんでした。OpenSSL に直接渡されます
-openssl.nonJsseChain=証明書チェイン [{0}] が指定されていないか、または有効ではありません。JSSE は有効な証明書チェインを必要とするため、OpenSSL の直接使用が試行されます
+openssl.nonJsseCertificate=証明書 [{0}] またはその秘密鍵 [{1}] は、JSSE キーマネージャを使用して処理できなかったため、OpenSSL に直接渡されます
+openssl.nonJsseChain=証明書チェーン [{0}] が指定されていないか無効であり、JSSE には有効な証明書チェーンが必要であるため、OpenSSL を直接使用しようとしています
 openssl.trustManagerMissing=トラストマネージャが見つかりません
 
 opensslconf.applyCommand=OpenSSLConfはコマンド（名前[{0}]、値[{1}]）を適用しています。
