--- a/java/org/apache/catalina/servlets/LocalStrings_ja.properties
+++ b/java/org/apache/catalina/servlets/LocalStrings_ja.properties
@@ -36,7 +36,7 @@ cgiServlet.runStdErrCount=stderrの [{0}] 行を受信しました
 cgiServlet.runStdErrFail=stderrでI/O問題
 
 defaultServlet.blockExternalEntity=publicId [{0}]およびsystemId [{0}]を持つ外部エンティティへのアクセスがブロックされました
-defaultServlet.blockExternalEntity2=外部エンティティへのアクセスを抑止しました。エンティティ名 [{0}]、publicId [{1}]、ベースURI [{2}]、systemId  [{3}]
+defaultServlet.blockExternalEntity2=エンティティ名 [{0}]、publicId [{1}]、baseURI [{2}] および systemId [{3}] を持つ外部エンティティへのアクセスがブロックされました
 defaultServlet.blockExternalSubset=名前[{0}]およびベースURI [{1}]を持つ外部サブセットへのアクセスがブロックされました
 defaultServlet.missingResource=要求されたリソース [{0}] は利用できません。
 defaultServlet.noResources=静的リソースが見つかりません。
