--- a/java/org/apache/catalina/valves/LocalStrings_ja.properties
+++ b/java/org/apache/catalina/valves/LocalStrings_ja.properties
@@ -133,8 +133,8 @@ patternTokenizer.unexpectedParenthesis=パターンに予期しない ')' があ
 persistentValve.acquireFailed=リクエスト [{0}] は、利用可能な許可がなかったため、セッションごとのセマフォを取得できませんでした
 persistentValve.acquireInterrupted=リクエスト [{0}] は、許可の待機中に中断されたため、セッションごとのセマフォを取得できませんでした
 persistentValve.filter.failure=filter = [{0}]をコンパイルできません
-persistentValve.requestIgnore=リクエスト [{0}] は、構成されたフィルターと一致するため、このバルブによって無視されました
-persistentValve.requestProcess=リクエスト [{0}] は、設定されたフィルターと一致しないため、このバルブによって処理されます
+persistentValve.requestIgnore=リクエスト [{0}] は、構成されたフィルターと一致するため、この Valve によって無視されました
+persistentValve.requestProcess=リクエスト [{0}] は、構成されたフィルターと一致しないため、この Valve によって処理されます
 
 remoteCidrValve.invalid="[{0}]" に不正な値が指定されました。詳細は前のメッセージを参照してください。
 remoteCidrValve.noPort=リクエストに有効なサーバーポートが含まれていません。 リクエストは拒否されました。
