--- a/java/org/apache/coyote/http11/upgrade/LocalStrings_ja.properties
+++ b/java/org/apache/coyote/http11/upgrade/LocalStrings_ja.properties
@@ -14,7 +14,7 @@
 # limitations under the License.
 
 upgrade.sis.errorCloseFail=直前のエラーの後に完全にInputStreamを閉じることができませんでした。
-upgrade.sis.isFinished.ise=ノンブロッキングモードではない ServletInputStream の isFinished() を呼び出すことはできません。(すなわち最初に setReadListener() を呼び出さなければなりません。)
+upgrade.sis.isFinished.ise=ServletInputStreamが非ブロッキングモードでない場合（つまり、最初にsetReadListener()を呼び出さなければならない場合）isFinished()を呼び出すことはできません。
 upgrade.sis.isReady.ise=ServletInputStreamが非ブロッキングモードでない場合（つまり、最初にsetReadListener()を呼び出さなければならない場合）isReady()を呼び出すことはできません。
 upgrade.sis.onErrorFail=onErrorは登録されたReadListenerが引き起こしたさらなるエラーを飲み込んで処理しています
 upgrade.sis.read.closed=InputStream はすでに切断されています。
