Improvements to Japanese translations by tak7iji

--- a/java/org/apache/jasper/resources/LocalStrings_ja.properties
+++ b/java/org/apache/jasper/resources/LocalStrings_ja.properties
@@ -375,7 +375,8 @@ jspc.webfrg.header=<?xml version="1.0" encoding="{0}"?>\n\
 Apache Tomcat JspC による自動生成\n\
 -->\n\
 \n
-jspc.webinc.footer=<!--\n\
+jspc.webinc.footer=\n\
+<!--\n\
 ここまで、Apache Tomcat JspC による自動生成\n\
 -->\n\
 \n
