--- a/java/org/apache/catalina/authenticator/jaspic/LocalStrings_ja.properties
+++ b/java/org/apache/catalina/authenticator/jaspic/LocalStrings_ja.properties
@@ -16,8 +16,8 @@
 authConfigFactoryImpl.load=[{0}]から永続化プロバイダの登録を読み込みます。
 authConfigFactoryImpl.registerClass=アプリケーションコンテキスト [{2}] のレイヤー [{1}] にクラス [{0}] を登録します。
 authConfigFactoryImpl.registerInstance=認証構成プロバイダ [{0}] のインスタンスを、レイヤ [{1}] とアプリケーションコンテキスト [{2}] に登録しています
-authConfigFactoryImpl.zeroLengthAppContext=文字列長が 0 のアプリケーションコンテキスト名は無効です。
-authConfigFactoryImpl.zeroLengthMessageLayer=長さゼロのメッセージレイヤ名は無効です
+authConfigFactoryImpl.zeroLengthAppContext=長さ 0 のアプリケーションコンテキスト名は無効です
+authConfigFactoryImpl.zeroLengthMessageLayer=長さ 0 のメッセージレイヤ名は無効です
 
 callbackHandlerImpl.containerMissing=無視されたタイプ [{0}] のJASPICコールバックのコンテナーがありません
 callbackHandlerImpl.jaspicCallbackMissing=受信したタイプ [{0}] のサポートされていないJASPICコールバックが無視されました
