Improvements to French translations. (remm)

--- a/java/org/apache/catalina/tribes/transport/nio/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/tribes/transport/nio/LocalStrings_fr.properties
@@ -16,6 +16,7 @@
 nioReceiver.alreadyStarted=ServerSocketChannel est déjà démarré
 nioReceiver.cleanup.fail=Impossible de nettoyer lors de la fermeture du sélecteur
 nioReceiver.clientDisconnect=Le client de réplication est déconnecté, erreur lors du "polling" de clé. Le client est ignoré.
+nioReceiver.eventsError=Erreur lors du traitement des évènements
 nioReceiver.requestError=Impossible de traiter la requête dans NioReceiver
 nioReceiver.run.fail=Impossible d'exécuter l'écouteur de réplication
 nioReceiver.start.fail=Incapable de démarrer le récepteur de cluster
