Improvements to Japanese translations by tak7iji

--- a/java/org/apache/catalina/tribes/transport/nio/LocalStrings_ja.properties
+++ b/java/org/apache/catalina/tribes/transport/nio/LocalStrings_ja.properties
@@ -16,6 +16,7 @@
 nioReceiver.alreadyStarted=ServerSocketChannel は既に開始しています。
 nioReceiver.cleanup.fail=セレクターの切断と後始末が失敗しました
 nioReceiver.clientDisconnect=レプリケーションクライアントが切断されました。ポーリングキーでエラーが発生しました。 クライアントを無視します。
+nioReceiver.eventsError=イベント処理中のエラー
 nioReceiver.requestError=NioReceiverでリクエストを処理できません
 nioReceiver.run.fail=レプリケーションリスナーを実行できません。
 nioReceiver.start.fail=クラスタレシーバを起動できません
