--- a/java/org/apache/jasper/resources/LocalStrings_ja.properties
+++ b/java/org/apache/jasper/resources/LocalStrings_ja.properties
@@ -379,7 +379,8 @@ jspc.warning.tldInWebInfLib=TLDファイルは/ WEB-INF/libに置かないでく
 jspc.webfrg.footer=\n\
 </web-fragment>\n\
 \n
-jspc.webinc.footer=<!--\n\
+jspc.webinc.footer=\n\
+<!--\n\
 ここまで、Apache Tomcat JspC による自動生成\n\
 -->\n\
 \n
