Back-port addditional translations

--- a/java/org/apache/catalina/tribes/transport/nio/LocalStrings_zh_CN.properties
+++ b/java/org/apache/catalina/tribes/transport/nio/LocalStrings_zh_CN.properties
@@ -16,6 +16,7 @@
 nioReceiver.alreadyStarted=ServerSocketChannel已经被启动
 nioReceiver.cleanup.fail=无法清除关闭的选择器
 nioReceiver.clientDisconnect=复制客户端已断开连接，轮询密钥时出错。忽略客户端。
+nioReceiver.eventsError=处理事件时出错
 nioReceiver.requestError=NioReceiver无法处理请求
 nioReceiver.run.fail=不能允许复制监听器
 nioReceiver.start.fail=无法启动集群接收器
