--- a/java/org/apache/catalina/tribes/transport/nio/LocalStrings_ko.properties
+++ b/java/org/apache/catalina/tribes/transport/nio/LocalStrings_ko.properties
@@ -16,6 +16,7 @@
 nioReceiver.alreadyStarted=ServerSocketChannel이 이미 시작되었습니다.
 nioReceiver.cleanup.fail=selector close 시에 cleanup을 할 수 없습니다.
 nioReceiver.clientDisconnect=복제 클라이언트가 연결이 끊겼습니다. 키를 poll할 때, 오류가 발생했습니다. 해당 클라이언트는 무시됩니다.
+nioReceiver.eventsError=이벤트들을 처리하는 중 오류 발생
 nioReceiver.requestError=NioReceiver에서 요청을 처리할 수 없습니다.
 nioReceiver.run.fail=복제 리스너를 실행할 수 없습니다.
 nioReceiver.start.fail=클러스터 receiver를 시작 할 수 없습니다.
