Improvements to French translations. (remm)

--- a/java/org/apache/catalina/ha/session/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/ha/session/LocalStrings_fr.properties
@@ -18,6 +18,8 @@ backupManager.startFailed=Impossible de démarrer le BackupManager : [{0}]
 backupManager.startUnable=Impossible de démarrer le BackupManager : [{0}]
 backupManager.stopped=Le gestionnaire de session [{0}] s''est arrêté
 
+clusterManager.noValve=Aucune ReplicationValve n'a été trouvée pour le support du cross contexte
+
 clusterSessionListener.noManager=Le gestionnaire de session du contexte n''existe pas : [{0}]
 
 deltaManager.createMessage.access=Gestionnaire de session [{0}] : création du message de session [{1}] d''accès
