--- a/java/org/apache/catalina/realm/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/realm/LocalStrings_fr.properties
@@ -38,6 +38,7 @@ jaasCallback.username=Nom d''utilisateur renvoyé [{0}]
 
 jaasMemoryLoginModule.callbackHandlerError=Erreur lors de l''invocation du CallbackHandler : [{0}]
 jaasMemoryLoginModule.invalidCredentials=Le nom d'utilisateur ou le mot de passe est incorrect
+jaasMemoryLoginModule.login=Connection de l''utilisateur [{0}] comme principal [{1}]
 jaasMemoryLoginModule.noCallbackHandler=Aucun CallbackHandler n'a été spécifié
 jaasMemoryLoginModule.noCatalinaBase=Impossible de déterminer le répertoire de base de Catalina pour pouvoir charger le fichier [{0}]
 jaasMemoryLoginModule.noConfig=Impossible de charger le fichier de configuration [{0}]
@@ -110,6 +111,7 @@ realmBase.hasRoleFailure=Le nom d''utilisateur [{0}] N''A PAS de rôle [{1}]
 realmBase.hasRoleSuccess=Le nom d''utilisateur [{0}] a pour rôle [{1}]
 realmBase.invalidDigestEncoding=L''encodage de digest spécifié [{0}] est invalide
 realmBase.unknownAllRolesMode=Le mode [{0}] est inconnu, il doit être : strict, authOnly ou strictAuthOnly
+realmBase.validity=Erreur lors de la vérification de la validité du certificat
 
 userDatabaseRealm.lookup=Exception lors de la recherche dans la base de données utilisateurs avec la clé [{0}]
 userDatabaseRealm.noDatabase=Aucun composant base de données utilisateurs trouvé pour la clé [{0}]
