--- a/java/org/apache/catalina/valves/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/valves/LocalStrings_fr.properties
@@ -26,6 +26,7 @@ accessLogValve.rotateFail=Échec de rotation des journaux d'accès
 accessLogValve.unsupportedEncoding=Impossible de changer l''encodage en [{0}], le jeu de caractères par défaut du système sera utilisé
 accessLogValve.writeFail=Impossible d''écrire le message de log [{0}]
 
+errorReportValve.contentTypeFail=Echec pour définir le content-type de la réponse
 errorReportValve.description=description
 errorReportValve.errorPageIOException=Impossible d''afficher la page d''erreur à [{0}] à cause d''une exception
 errorReportValve.errorPageNotFound=Impossible de trouver une erreur page statique à [{0}]
@@ -47,6 +48,12 @@ extendedAccessLogValve.decodeError=Impossible de décoder les caractères restan
 extendedAccessLogValve.emptyPattern=Le modèle est vide
 extendedAccessLogValve.noClosing=Une parenthèse de fermeture n'a pas été trouvée lors du décodage
 extendedAccessLogValve.patternParseError=Erreur lors de l''analyse du modèle [{0}]
+
+filterValve.illegalWrapping=Le filtre de classe [{0}] a changé ou enrobé la requête de manière illégale
+filterValve.initError=Erreur lors de l''initialisation du filtre de la classe [{0}]
+filterValve.noContext=La vanne filtre pour [{0}] n''a pas de contexte associé
+filterValve.nullFilterClassName=Le nom de classes du filtre est null
+filterValve.proxyServletContext=Le contexte de Servlet proxy ne doit pas être utilisé
 
 http.400.desc=La requête envoyée par le client était syntaxiquement incorrecte.
 http.400.reason=Requête invalide
@@ -128,6 +135,9 @@ http.511.reason=L’authentification du réseau est nécessaire
 jdbcAccessLogValve.close=Echec de fermeture de la base de donnée
 jdbcAccessLogValve.exception=Exception en insérant l'entrée de l'accès
 
+loadBalancerDrainingValve.draining=Le balanceur de charge est dans l'étât DISABLED, le changement de répartition de la charge est sauté
+loadBalancerDrainingValve.skip=Le client a envoyé un cookie [{0}] valide, le le changement de répartition de la charge est sauté
+
 patternTokenizer.unexpectedParenthesis=')' inattendu dans le modèle
 
 persistentValve.acquireFailed=La requête pour [{0}] n''a pas obtenu le sémaphore associé à la session car aucun permis n''était disponible
@@ -135,6 +145,9 @@ persistentValve.acquireInterrupted=La requête pour [{0}] n''a pas obtenu le sé
 persistentValve.filter.failure=Impossible de compiler le filtre=[{0}]
 persistentValve.requestIgnore=La requête pour [{0}] a été ignorée par cette Valve car elle correspond au filtre configuré
 persistentValve.requestProcess=La requête pour [{0}] va être traitée par cette Valve car elle ne correspond pas au filtre configuré
+persistentValve.sessionLoadFail=Le chargement de la session [{0}] depuis le stockage a échoué
+
+proxyErrorReportValve.error=Erreur de proxy vers [{0}]
 
 remoteCidrValve.invalid=La configuration fournie pour [{0}] est invalide, voir les précédents messages pour plus de détails
 remoteCidrValve.noPort=La requête est rejetée car elle ne contient pas un port du serveur valide
@@ -152,6 +165,7 @@ requestFilterValve.deny=Refus de la requête pour [{0}] basé sur la propriété
 sslValve.certError=Impossible de traiter le certificat [{0}] pour créer un objet java.security.cert.X509Certificate
 sslValve.invalidProvider=Le fournisseur SSL spécifié pour le connecteur associé avec cette requête de [{0}] est invalide, le certificat n''a pas pu être traité
 
+stuckThreadDetectionValve.interrupted=Le fil d'exécution a été interrompu après la fin de la requête, cela sera ignoré
 stuckThreadDetectionValve.notifyStuckThreadCompleted=Le Thread [{0}] (id=[{3}]) qui a été préalablement rapporté comme étant bloqué s''est terminé, il a été actif pendant approximativement [{1}] millisecondes, il y a [{2}] thread(s) au total qui sont surveillés par cette valve et qui pourraient être bloqués
 stuckThreadDetectionValve.notifyStuckThreadDetected=Le Thread [{0}] (id=[{6}]) a été actif depuis [{1}] millisecondes (depuis [{2}]) pour traiter la même requête pour [{4}] et pourrait être bloqué (le seuil configurable est de [{5}] secondes pour cette StuckThreadDetectionValve), il y a [{3}] thread(s) au total qui sont surveillés par cette valve et qui pourraient être bloqués
 stuckThreadDetectionValve.notifyStuckThreadInterrupted=Le Thread [{0}] (id=[{5}]) a été interrompu car il a été actif depuis [{1}] millisecondes (depuis [{2}]) pour traiter la même requête pour [{3}] et était probablement bloqué (le seuil configurable est de [{4}] secondes pour cette StuckThreadDetectionValve)
