--- a/java/org/apache/coyote/LocalStrings_fr.properties
+++ b/java/org/apache/coyote/LocalStrings_fr.properties
@@ -25,6 +25,7 @@ abstractConnectionHandler.protocolexception.debug=Les ProtocolExceptions sont no
 abstractConnectionHandler.socketexception.debug=Les SocketException sont normales et sont ignorées
 abstractConnectionHandler.upgradeCreate=Création du processeur pour l''upgrade [{0}] du wrapper du socket [{1}]
 
+abstractProcessor.asyncFail=Impossible d'écrire les données asynchrones
 abstractProcessor.fallToDebug=\n\
 \ Note : les occurrences suivantes d'erreurs d'analyse de requête seront enregistrées au niveau DEBUG.
 abstractProcessor.hostInvalid=L''hôte [{0}] n''est pas valide
