--- a/java/org/apache/coyote/http11/filters/LocalStrings_fr.properties
+++ b/java/org/apache/coyote/http11/filters/LocalStrings_fr.properties
@@ -29,4 +29,6 @@ chunkedInputFilter.invalidTrailerHeaderValue=La valeur de l'en-tête de fin est 
 chunkedInputFilter.maxExtension=maxExtensionSize a été dépassé
 chunkedInputFilter.maxTrailer=maxTrailerSize a été dépassé
 
+gzipOutputFilter.flushFail=L'erreur lors de l'envoi des données du filtre gzip est ignorée
+
 inputFilter.maxSwallow=maxSwallowSize a été dépassé
