--- a/java/org/apache/tomcat/util/buf/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/util/buf/LocalStrings_fr.properties
@@ -30,6 +30,9 @@ encodedSolidusHandling.invalid=La valeur [{0}] n''est pas reconnue
 hexUtils.fromHex.nonHex=L'entrée doit être uniquement des chiffres héxadécimaux
 hexUtils.fromHex.oddDigits=L'entrée doit contenir un nombre pair de chiffres héxadécimaux
 
+stringCache.byteTime=Temps de génération du ByteCache: {0}ms
+stringCache.charTime=Temps de génération du CharCache: {0}ms
+
 uDecoder.eof=Fin de fichier (EOF)
 uDecoder.isHexDigit=L'encodage hexadécimal est invalide
 uDecoder.noSlash=Un caractère slash encodé n'est pas autorisé
