--- a/java/org/apache/tomcat/util/codec/binary/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/util/codec/binary/LocalStrings_fr.properties
@@ -17,3 +17,4 @@ base64.impossibleModulus=Modulo [{0}] invalide
 base64.inputTooLarge=Le tableau en entrée est trop grand, la taille du tableau de sortie [{0}] serait plus grande que la taille maximale autorisée [{1}]
 base64.lineSeparator=Le séparateur de ligne ne doit pas contenir des caractères base64 [{0}]
 base64.nullEncodeParameter=Impossible d'encoder unentier en utilisant un paramètre null
+base64.outOfMemory=Impossible d''allouer un tableau de taille [{0}]
