--- a/java/org/apache/tomcat/util/descriptor/web/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/util/descriptor/web/LocalStrings_fr.properties
@@ -25,6 +25,7 @@ servletDef.invalidServletName=<servlet-name> [{0}] invalide dans la définition 
 webRuleSet.absoluteOrdering=L’élément <absolute-ordering> est invalide dans web-fragment.xml et sera ignoré
 webRuleSet.absoluteOrderingCount=L'élément <absolute-ordering> est limité à 1 ocurrence
 webRuleSet.nameCount=L'élément <name> est limité à 1 ocurrence
+webRuleSet.noMethod=Impossible de trouver la méthode [{0}] dans l''objet [{1}] de la classe [{2}]
 webRuleSet.postconstruct.duplicate=La méthode post construct est dupliquée dans la classe [{0}]
 webRuleSet.predestroy.duplicate=Double définition de l''annotation de méthode @PreDestroy pour la classe [{0}]
 webRuleSet.relativeOrdering=L’élément <ordering> est invalide dans web.xml et sera ignoré
