--- a/java/org/apache/tomcat/util/http/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/util/http/LocalStrings_fr.properties
@@ -32,6 +32,7 @@ parameters.invalidChunk=Morceau (chunk) invalide démarrant à l''octet [{0}] et
 parameters.maxCountFail=Le nombre maximum de paramètres pour une seule requête (GET plus POST) [{0}] a été détecté, les paramètres supplémentaires ont été ignorés ; l''attribut maxParameterCount du Connector permet de changer cette limite
 parameters.noequal=Le paramètre qui démarre à la position [{0}] et qui se termine à la position [{1}] avec comme valeur [{2}] n''est pas suivi par un caractère ''=''
 
+rfc6265CookieProcessor.expectedBytes=Le cookie est traité comme String, des bytes étaient attendus
 rfc6265CookieProcessor.invalidAttributeName=Un nom d''attribut invalide [{0}] a été spécifié pour ce cookie
 rfc6265CookieProcessor.invalidAttributeValue=Un valeur d''attribut invalide [{0}] a été spécifiée pour cet attribut de cookie [{1}]
 rfc6265CookieProcessor.invalidCharInValue=Un caractère invalide [{0}] était présent dans la valeur du cookie
