--- a/java/org/apache/tomcat/util/net/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/util/net/LocalStrings_fr.properties
@@ -47,7 +47,7 @@ endpoint.accept.fail=Aucun socket n'a pu être accepté
 endpoint.alpn.fail=Erreur de configuration de la terminaison pour ALPN en utilisant [{0}]
 endpoint.alpn.negotiated=Le protocole [{0}] a été négocié en utilisant ALPN
 endpoint.apr.failSslContextMake=Incapable de créer un SSLContext. Vérifier que SSLEngine est activé dans l'AprLifecycleListener, que l'AprLifecycleListener a été correctement initialisé et qu'un protocole SSL valide a été spécifié.
-endpoint.apr.invalidSslProtocol=Un valeur invalide [{0}] a été donnée pour l''attribut SSLProtocol
+endpoint.apr.invalidSslProtocol=La valeur invalide [{0}] a été fournie pour l''attribut SSLProtocol
 endpoint.debug.channelCloseFail=Echec de la fermeture du canal (channel)
 endpoint.debug.destroySocket=Destruction du socket [{0}]
 endpoint.debug.handlerRelease=Le gestionnaire n'a pas pu retirer le wrapper du socket
