--- a/java/org/apache/tomcat/util/net/openssl/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/util/net/openssl/LocalStrings_fr.properties
@@ -46,6 +46,8 @@ openssl.errApplyConf=Impossible d'appliquer la OpenSSLConf au contexte SSL
 openssl.errCheckConf=Erreur pendant la vérification de OpenSSLConf
 openssl.errMakeConf=Impossible de créer le contexte de OpenSSLConf
 openssl.errorSSLCtxInit=Erreur d'initialisation du contexte SSL
+openssl.failSslContextMake=Impossible de créer le SSLContext. Vérfiez que le SSLEngine est activé dans l'AprLifecycleListener, que celui ci a été initialisé correctement et qu'un SSLProtocol valide a été spécifié.
+openssl.invalidSslProtocol=La valeur invalide [{0}] a été fournie pour l''attribut SSLProtocol
 openssl.keyManagerMissing=Aucun gestionnaire de clés trouvé
 openssl.keyManagerMissing.warn=Aucun gestionnaire de clés trouvé. TLS fonctionnera mais les certificats ne seront pas exposés dans Tomcat donc les fonctionnalités de gestion ne seront pas disponibles pour ce certificat.
 openssl.makeConf=Création du contexte de OpenSSLConf
