--- a/java/org/apache/tomcat/util/net/openssl/panama/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/util/net/openssl/panama/LocalStrings_fr.properties
@@ -33,6 +33,7 @@ engine.nullName=La valeur du nom est null
 engine.nullValue=La valeur est null
 engine.ocspParseError=Erreur de traitement des URLs OCSP
 engine.ocspRequestError=Erreur de traitement de la requête OCSP pour l''URL [{0}]
+engine.ocspResponse=La réponse OCSP pour l''URL [{0}] était [{1}]
 engine.openSSLError=Erreur OpenSSL : [{0}] message : [{1}]
 engine.oversizedPacket=Le paquet crypté est trop gros
 engine.unsupportedCipher=Suite de chiffres non supportée : [{0}] [{1}]
@@ -57,6 +58,7 @@ openssl.errorLoadingPassword=Erreur lors du chargment du fichier mot de passe: [
 openssl.errorLoadingPrivateKey=Erreur lors du chargment de la clé privée: [{0}]
 openssl.errorPrivateKeyCheck=La clé privée ne correspond pas à la clé publique du certificat: [{0}]
 openssl.errorSSLCtxInit=Erreur d'initialisation du contexte SSL
+openssl.invalidSslProtocol=La valeur invalide [{0}] a été fournie pour l''attribut SSLProtocol
 openssl.keyManagerMissing=Aucun gestionnaire de clés trouvé
 openssl.makeConf=Création du contexte de OpenSSLConf
 openssl.noCACerts=Aucun certificat CA n'a été configuré
