--- a/java/org/apache/catalina/ha/tcp/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/ha/tcp/LocalStrings_fr.properties
@@ -31,10 +31,13 @@ ReplicationValve.stats=Temps de requête moyen= [{0}] ms pour le Cluster le temp
 
 simpleTcpCluster.clustermanager.cloneFailed=Impossible de cloner le gestionnaire du cluster, le org.apache.catalina.ha.session.DeltaManager par défaut sera utilisé
 simpleTcpCluster.clustermanager.notImplement=Le gestionnaire ("Manager") [{0}] n''implémente pas ClusterManager. Son ajout au cluster a été abandonné.
+simpleTcpCluster.createManager=Création d''un ClusterManager pour le contexte [{0}] en utilisant la classe [{1}]
 simpleTcpCluster.member.addFailed=Impossible de se connecter au système de réplication
 simpleTcpCluster.member.added=Membre de réplication ajouté : [{0}]
 simpleTcpCluster.member.disappeared=Le membre recu a disparu : [{0}]
 simpleTcpCluster.member.removeFailed=Impossible d'enlever un nœud du cluster du système de réplication
+simpleTcpCluster.noListener=Le message [{0}] de type [{1}] a été transféré mais aucun écouteur n''est enregistré
+simpleTcpCluster.noMembers=Aucun membre dans le cluster, le message [{0}] est ignoré
 simpleTcpCluster.sendFailed=Impossible d'envoyer un message à travers l'expéditeur du cluster
 simpleTcpCluster.start=Le cluster va démarrer
 simpleTcpCluster.startUnable=Impossible de démarre le cluster
