--- a/java/org/apache/catalina/mbeans/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/mbeans/LocalStrings_fr.properties
@@ -13,6 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+globalResources.create=Création des MBeans pour les ressources JNDI globales dans le contexte [{0}]
 globalResources.createError=Erreur lors du traitement des ressources JNDI globales
 globalResources.createError.operation=Une erreur d'opération non supportée s'est produite lors de la création des MBeans
 globalResources.createError.runtime=Erreur inattendue lors de la création des MBeans
