--- a/java/org/apache/catalina/tribes/tipis/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/tribes/tipis/LocalStrings_fr.properties
@@ -22,9 +22,13 @@ abstractReplicatedMap.leftOver.pingMsg=Le délai d''attente a été dépassé po
 abstractReplicatedMap.mapMember.unavailable=Le membre [{0}] n''est pas encore disponible
 abstractReplicatedMap.mapMemberAdded.added=Le membre de la structure répliquée a été ajouté : [{0}]
 abstractReplicatedMap.mapMemberAdded.nullMember=Notifié que le membre n''est pas disponible dans le registre de membres : [{0}]
+abstractReplicatedMap.newBackup=Le noeud primaire choisit une nouvelle sauvegarde
+abstractReplicatedMap.newPrimary=Le noeud de sauvegarde devient le primaire
 abstractReplicatedMap.ping.stateTransferredMember=L''état du membre [{0}] est transféré mais il n''est pas encore disponible
 abstractReplicatedMap.ping.timeout=Le membre [{0}] dans la carte répliquée [{1}] a fait un timeout lors du traitement d''un ping
+abstractReplicatedMap.primaryDisappeared=Le noeud primaire a disparu
 abstractReplicatedMap.relocate.complete=La relocation des entrées de la structure répliquée a été finie en [{0}] ms
+abstractReplicatedMap.removeOrphan=Retrait d'un proxy orphelin
 abstractReplicatedMap.transferState.noReplies=État de transfert, 0 réponses, probablement un timeout
 abstractReplicatedMap.unable.deserialize.MapMessage=Impossible de désérialiser MapMessage
 abstractReplicatedMap.unable.diffObject=Impossible d'obtenir les différences de l'objet, il sera entièrement répliqué
@@ -47,6 +51,7 @@ mapMessage.deserialize.error.key=Erreur de désérialisation de la clé du MapMe
 mapMessage.deserialize.error.value=Erreur de désérialisation de la valeur du MapMessage
 
 replicatedMap.member.disappeared=Le membre [{0}] a disparu, les entrées correspondantes seront déplacées sur un nouveau nœud
+replicatedMap.member.disappeared.unknown=Le membre [{0}] a disparu, mais il n''était pas présent dans la liste
 replicatedMap.relocate.complete=La relocation des entrées de la structure répliquée a été accomplie en [{0}] ms
 replicatedMap.unable.relocate=Impossible de déplacer [{0}] sur un nouveau noeud auxiliaire.
 replicatedMap.unableReplicate.completely=Impossible de répliquer la clé de sauvegarde : [{0}], succès pour les nœuds : [{1}], échec pour les nœuds : [{2}]
