--- a/java/org/apache/catalina/tribes/transport/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/tribes/transport/LocalStrings_fr.properties
@@ -19,6 +19,7 @@ pooledSender.closed.queue=La queue est fermée
 
 receiverBase.bind.failed=Échec d''attachement en écoute de la réplication à l''adresse [{0}]
 receiverBase.socket.bind=Socket de réception du serveur attaché à : [{0}]
+receiverBase.start=Démarrage de l''écouteur de réplication sur l''adresse [{0}]
 receiverBase.udp.bind=Le socket serveur receveur est associé avec [{0}]
 receiverBase.unable.bind=Impossible de lier la socket serveur à : [{0}], cela renvoie une erreur.
 receiverBase.unable.bind.udp=Impossible d''associer le socket UDP à [{0}], propagation de l''erreur
