--- a/java/org/apache/catalina/users/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/users/LocalStrings_fr.properties
@@ -14,6 +14,7 @@
 # limitations under the License.
 
 dataSourceUserDatabase.exception=Exception lors de l'accès à la base de données
+dataSourceUserDatabase.features=Fonctionnalités de la UserDatabase utilisant une DataSource: User <-> Rôle [{0}], Rôles [{1}], Groupes [{2}]
 
 memoryUserDatabase.fileClose=Echec de fermeture [{0}]
 memoryUserDatabase.fileDelete=Impossible d''effacer [{0}]
