--- a/java/org/apache/catalina/valves/rewrite/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/valves/rewrite/LocalStrings_fr.properties
@@ -23,4 +23,6 @@ rewriteValve.closeError=Erreur lors de la fermeture de la configuration
 rewriteValve.invalidFlags=Indicateur invalide dans [{0}] indicateurs [{1}]
 rewriteValve.invalidLine=Ligne invalide [{0}]
 rewriteValve.invalidMapClassName=Le nom de la classe [{0}] de la structure est invalide
+rewriteValve.noConfiguration=Aucune ressource de configuration trouvée à [{0}]
+rewriteValve.readConfiguration=Lecture de la configuration depuis [/WEB-INF/{0}]
 rewriteValve.readError=Erreur lors de la lecture de la configuration
