--- a/java/org/apache/coyote/ajp/LocalStrings_fr.properties
+++ b/java/org/apache/coyote/ajp/LocalStrings_fr.properties
@@ -23,10 +23,12 @@ ajpmessage.overflow=Débordement du tampon en ajoutant [{0}] octets à la positi
 ajpprocessor.certs.fail=La conversion du certificat a échouée
 ajpprocessor.header.error=Erreur de traitement du message d'en-tête
 ajpprocessor.header.tooLong=Un en-tête de message de taille [{0}] a été reçu mais la packtSize est de seulement [{1}]
+ajpprocessor.pongFail=Le message de réponse au ping a échoué
 ajpprocessor.readtimeout=Timeout lors de la lecture de données sur le socket
 ajpprocessor.request.prepare=Erreur lors de la préparation de la requête
 ajpprocessor.request.process=Erreur de traitement de la requête
 ajpprocessor.response.invalidHeader=L''en-tête de réponse HTTP [{0}] avec la valeur [{1}] a été retiré de la réponse car il est invalide
+ajpprocessor.unexpectedMessage=Message de type inattendu [{0}]
 ajpprocessor.unknownAttribute=La requête est rejetée à cause de l''attribut de requête [{0}] inconnu reçu du reverse proxy
 
 ajpprotocol.noSSL=SSL n''est pas supporté par AJP, la configuration de l''hôte SSL pour [{0}] a été ignorée
