--- a/java/org/apache/tomcat/util/digester/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/util/digester/LocalStrings_fr.properties
@@ -24,6 +24,7 @@ digester.error.finish=L'évènement finalisation a renvoyé une exception
 digester.errorLocation=Erreur à la ligne [{0}] colonne [{1}] : [{2}]
 digester.failedToUpdateAttributes=L''attribut [{0}] n''a pu être mis à jour et garde la valeur [{1}]
 digester.failedToUpdateSystemProperty=La propriété système [{0}] n''a pu être mise à jour et reste [{1}]
+digester.invalidURI=URI invalide [{0}] ou [{1}]
 digester.noLocator=Pas de localisateur
 digester.noRulesFound=Aucun règle correspondant à [{0}] n''a été trouvée
 digester.parseError=Erreur lors de l''analyse à la ligne [{0}] colonne [{1}]
