--- a/java/org/apache/tomcat/util/threads/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/util/threads/LocalStrings_fr.properties
@@ -15,6 +15,8 @@
 
 taskQueue.notRunning=L'exécuteur n'a pas été démarré, impossible d'ajouter une commande à la file d'attente
 
+taskThread.exiting=Le fil d'exécution s'arrête de manière volontaire
+
 threadPoolExecutor.invalidKeepAlive=Les threads principaux doivent avoir un temps d'inactivité positif
 threadPoolExecutor.queueFull=La file d'attente est pleine
 threadPoolExecutor.taskRejected=La tâche [{0}] a été rejetée par [{1}]
