--- a/java/org/apache/tomcat/websocket/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/websocket/LocalStrings_fr.properties
@@ -53,6 +53,7 @@ perMessageDeflate.unknownParameter=Un paramètre d''extension inconnu [{0}] a é
 
 util.invalidMessageHandler=Le gestionnaire de messages fourni n'a pas de méthode onMessage(Object)
 util.invalidType=Incapable de convertir la valeur [{0}] en le type [{1}]. Ce type n''est pas supporté.
+util.invalidValue=La valeur [{0}] contient des délimitateurs
 util.notToken=Un paramètre d''extension illégal a été spécifié avec le nom [{0}] et la valeur [{1}]
 util.unknownDecoderType=Le Decoder de type [{0}] n''est pas reconnu
 
