Improvements to Japanese translations by tak7iji

--- a/java/org/apache/catalina/ha/session/LocalStrings_ja.properties
+++ b/java/org/apache/catalina/ha/session/LocalStrings_ja.properties
@@ -18,6 +18,8 @@ backupManager.startFailed=BackupManager: [{0}]の起動に失敗しました。
 backupManager.startUnable=BackupManager を開始できません: [{0}]
 backupManager.stopped=マネージャ [{0}] を停止します
 
+clusterManager.noValve=クロスコンテキストサポート用の ReplicationValve が見つかりません
+
 clusterSessionListener.noManager=Context Managerが存在しません。
 
 deltaManager.createMessage.access=マネージャ [{0}]: セッション [{1}] へのアクセスメッセージを作成します
