--- a/java/org/apache/catalina/users/LocalStrings_ja.properties
+++ b/java/org/apache/catalina/users/LocalStrings_ja.properties
@@ -14,6 +14,7 @@
 # limitations under the License.
 
 dataSourceUserDatabase.exception=データベースアクセスで例外が発生
+dataSourceUserDatabase.features=データソース UserDatabase の機能: User <-> Role [{0}]、Roles [{1}]、Group [{2}]
 
 memoryUserDatabase.fileClose=[{0}]のクローズに失敗しました
 memoryUserDatabase.fileDelete=[{0}]を削除できませんでした
