--- a/java/org/apache/catalina/valves/rewrite/LocalStrings_ja.properties
+++ b/java/org/apache/catalina/valves/rewrite/LocalStrings_ja.properties
@@ -23,4 +23,6 @@ rewriteValve.closeError=構成クローズ中のエラー
 rewriteValve.invalidFlags=[{0}]に無効なフラグ [{1}]があります。
 rewriteValve.invalidLine=無効な行[{0}]
 rewriteValve.invalidMapClassName=Mapクラス名[{0}]が無効です。
+rewriteValve.noConfiguration=設定リソースが見つかりません [{0}]
+rewriteValve.readConfiguration=[/WEB-INF/{0}] から構成を読み取ります
 rewriteValve.readError=構成の読み取りエラー
