--- a/java/org/apache/coyote/LocalStrings_ja.properties
+++ b/java/org/apache/coyote/LocalStrings_ja.properties
@@ -25,6 +25,7 @@ abstractConnectionHandler.protocolexception.debug=ProtocolExceptionsは正常で
 abstractConnectionHandler.socketexception.debug=SocketExceptionsは正常です。無視します。
 abstractConnectionHandler.upgradeCreate=SocketWrapper [{1}]のアップグレードプロセッサ[{0}]が作成されました。
 
+abstractProcessor.asyncFail=非同期データを書き込むことができません
 abstractProcessor.fallToDebug=\n\
 \ 注: 以降のリクエスト構文解析エラーの発生はDEBUGレベルでログに出力されます。
 abstractProcessor.hostInvalid=ホスト名 [{0}] は無効です。
