--- a/java/org/apache/tomcat/util/net/openssl/panama/LocalStrings_ja.properties
+++ b/java/org/apache/tomcat/util/net/openssl/panama/LocalStrings_ja.properties
@@ -33,6 +33,7 @@ engine.nullName=Null値の名前
 engine.nullValue=Null値
 engine.ocspParseError=OCSP URLのパース失敗
 engine.ocspRequestError=URL [{0}] の OCSP リクエストの処理エラー
+engine.ocspResponse=URL [{0}] に対する OCSP レスポンスは [{1}] でした
 engine.openSSLError=OpenSSLエラー: [{0}] メッセージ: [{1}]
 engine.oversizedPacket=暗号化されたパケットのサイズが大きすぎます
 engine.unsupportedCipher=サポートされていない暗号スイート: [{0}] [{1}]
@@ -57,6 +58,7 @@ openssl.errorLoadingPassword=パスワードファイルの読み込みエラー
 openssl.errorLoadingPrivateKey=秘密鍵の読み込みエラー: [{0}]
 openssl.errorPrivateKeyCheck=秘密鍵が証明書の公開鍵と一致しません: [{0}]
 openssl.errorSSLCtxInit=SSLコンテキストの初期化エラー
+openssl.invalidSslProtocol=無効な値 [{0}] が SSLProtocol 属性に指定されました
 openssl.keyManagerMissing=キーマネージャが見つかりません
 openssl.makeConf=OpenSSLConf コンテキストの作成
 openssl.noCACerts=CA証明書が設定されていませんでした
