--- a/java/org/apache/tomcat/util/threads/LocalStrings_ja.properties
+++ b/java/org/apache/tomcat/util/threads/LocalStrings_ja.properties
@@ -15,6 +15,8 @@
 
 taskQueue.notRunning=Executor が動作していないため、コマンドを強制的にキューへ登録できません
 
+taskThread.exiting=スレッドが意図的に終了しました
+
 threadPoolExecutor.invalidKeepAlive=コアスレッドは正のキープアライブ時間が必要です
 threadPoolExecutor.queueFull=キューが一杯です
 threadPoolExecutor.taskRejected=タスク [{0}] が [{1}] から拒否されました
