--- a/java/org/apache/catalina/mbeans/LocalStrings_ja.properties
+++ b/java/org/apache/catalina/mbeans/LocalStrings_ja.properties
@@ -13,6 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+globalResources.create=コンテキスト [{0}] で Global JNDI リソース用の MBean を作成しています
 globalResources.createError=グローバル JNDI リソース処理中の例外
 globalResources.createError.operation=MBean 作成中の操作未サポートエラー
 globalResources.createError.runtime=MBeans 作成中の予期せぬエラー
