--- a/java/org/apache/tomcat/util/LocalStrings_ja.properties
+++ b/java/org/apache/tomcat/util/LocalStrings_ja.properties
@@ -13,6 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+diagnostics.deadlockFound=次のスレッド間でデッドロックが検出されました:
+diagnostics.setPropertyFail=[{0}] を [{1}] に設定できませんでした。代わりに [{2}] を取得しました
 diagnostics.threadDumpTitle=完全なスレッドダンプ
 diagnostics.vmInfoClassCompilation=Class コンパイル
 diagnostics.vmInfoClassLoading=クラスローディング
@@ -31,5 +33,8 @@ diagnostics.vmInfoThreadMxBean=ThreadMXBeanの機能
 
 introspectionUtils.conversionError=[{0}] からクラス [{1}] への変換中のエラー
 introspectionUtils.getPropertyError=クラス [{1}] のプロパティ [{0}] を取得中のエラー
+introspectionUtils.hostResolutionFail=ホスト名 [{0}] を解決できません
+introspectionUtils.noMethod=クラス [{2}] のオブジェクト [{1}] にメソッド [{0}] が見つかりません
 introspectionUtils.nullParameter=引数のオブジェクト、メソッド、パラメータのいずれも null を指定できません。
 introspectionUtils.setPropertyError=クラス [{2}] のプロパティ [{0}] に [{1}] を設定中のエラー
+introspectionUtils.tooManyIterations=プロパティは解決できなかったため [{0}] のままです
