--- a/java/org/apache/tomcat/util/buf/LocalStrings_ja.properties
+++ b/java/org/apache/tomcat/util/buf/LocalStrings_ja.properties
@@ -30,6 +30,9 @@ encodedSolidusHandling.invalid=値 [{0}] は認識されません
 hexUtils.fromHex.nonHex=入力は16進数でなければなりません
 hexUtils.fromHex.oddDigits=入力は、偶数の16進数で構成する必要があります。
 
+stringCache.byteTime=ByteCache 生成時間: {0}ms
+stringCache.charTime=CharCache 生成時間: {0}ms
+
 uDecoder.eof=予期せぬ場所で終端に達しました。
 uDecoder.isHexDigit=16進エンコーディングが無効です
 uDecoder.noSlash="/" を符号化して含めることはできません。
