--- a/java/org/apache/tomcat/util/digester/LocalStrings_ja.properties
+++ b/java/org/apache/tomcat/util/digester/LocalStrings_ja.properties
@@ -24,6 +24,7 @@ digester.error.finish=Finish イベントで例外を送出しました。
 digester.errorLocation=行番号 [{0}] 列番号 [{1}] でエラーが発生しました: [{2}]
 digester.failedToUpdateAttributes=属性[{0}]が更新に失敗し、[{1}]に残りました。
 digester.failedToUpdateSystemProperty=システムプロパティ [{0}] を更新できません。元の値 [{1}] はそのままです。
+digester.invalidURI=無効な URI [{0}] または [{1}]
 digester.noLocator=ロケータを利用できません。
 digester.noRulesFound=[{0}]と一致するルールは見つかりませんでした。
 digester.parseError=行[{0}]の列[{1}]の解析エラー
