--- a/java/org/apache/tomcat/util/http/LocalStrings_ja.properties
+++ b/java/org/apache/tomcat/util/http/LocalStrings_ja.properties
@@ -32,6 +32,7 @@ parameters.invalidChunk=バイト値 [{0}] で始まりバイト値 [{1}] で終
 parameters.maxCountFail=単独のリクエスト ([{0}]) のリクエストパラメーター (GET および POST) の数が上限値を超えています。上限値を超えるすべてのパラメーターは無視します。上限値を変更するには Connector 要素の maxParameterCount 属性を設定してください。
 parameters.noequal=[{2}] の値で [{0}] の位置から [{1}] の位置で終了するパラメータには、''=''文字が続いていませんでした
 
+rfc6265CookieProcessor.expectedBytes=Cookie を文字列として解析中、期待されるバイト数
 rfc6265CookieProcessor.invalidAttributeName=このCookieに無効な属性名 [{0}] が指定されました
 rfc6265CookieProcessor.invalidAttributeValue=このCookie属性 [{0}] に無効な属性値 [{1}] が指定されました
 rfc6265CookieProcessor.invalidCharInValue=無効な文字[{0}]がCookie値に存在します。
