--- a/java/org/apache/tomcat/util/net/openssl/LocalStrings_ja.properties
+++ b/java/org/apache/tomcat/util/net/openssl/LocalStrings_ja.properties
@@ -46,6 +46,8 @@ openssl.errApplyConf=OpenSSLConfをSSLコンテキストに適用できません
 openssl.errCheckConf=OpenSSLConfチェック中のエラー
 openssl.errMakeConf=OpenSSLConfコンテキストを作成できませんでした。
 openssl.errorSSLCtxInit=SSL コンテキスト初期化中のエラー
+openssl.failSslContextMake=SSLContextを作成できません。 SSLEngine が AprLifecycleListener で有効になっていること、AprLifecycleListener が正しく初期化されていること、および有効な SSLProtocol が指定されていることを確認してください
+openssl.invalidSslProtocol=無効な値 [{0}] が SSLProtocol 属性に指定されました
 openssl.keyManagerMissing=キーマネージャーが見つかりません。
 openssl.keyManagerMissing.warn=キーマネージャーが見つかりませんでした。 TLS は機能しますが、証明書は Tomcat からは認識されないため、この証明書に対して管理/監視機能は機能しません
 openssl.makeConf=OpenSSLConfコンテキストの作成
