Improvements to French translations. (remm)

--- a/java/org/apache/tomcat/util/http/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/util/http/LocalStrings_fr.properties
@@ -37,6 +37,7 @@ parameters.maxCountFail.fallToDebug=\n\
 parameters.multipleDecodingFail=Echec de décodage de caractère, [{0}] erreurs ont été détectées au total mais seule la première a été logguée, activez le niveau debug pour avoir toutes les erreurs
 parameters.noequal=Le paramètre qui démarre à la position [{0}] et qui se termine à la position [{1}] avec comme valeur [{2}] n''est pas suivi par un caractère ''=''
 
+rfc6265CookieProcessor.expectedBytes=Le cookie est traité comme String, des bytes étaient attendus
 rfc6265CookieProcessor.invalidAttributeName=Un nom d''attribut invalide [{0}] a été spécifié pour ce cookie
 rfc6265CookieProcessor.invalidAttributeValue=Un valeur d''attribut invalide [{0}] a été spécifiée pour cet attribut de cookie [{1}]
 rfc6265CookieProcessor.invalidCharInValue=Un caractère invalide [{0}] était présent dans la valeur du cookie
