--- a/java/org/apache/catalina/session/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/session/LocalStrings_fr.properties
@@ -31,6 +31,7 @@ fileStore.deleteFailed=Impossible d''effacer le fichier [{0}] qui empêche la cr
 fileStore.deleteSessionFailed=Impossible d''effacer le fichier [{0}] qui n''est plus nécessaire
 fileStore.invalid=Fichier de persistance [{0}] invalide pour la session avec id [{1}]
 fileStore.loading=Chargement de la Session [{0}] depuis le fichier [{1}]
+fileStore.noFile=Le fichier de persistence [{1}] pour la session [{0}] n''a pas été trouvé
 fileStore.removing=Retrait de la Session [{0}] du fichier [{1}]
 fileStore.saving=Sauvegarde de la Session [{0}] vers le fichier [{1}]
 
@@ -47,6 +48,7 @@ persistentManager.backupMaxIdle=Sauvegarde de la session [{0}] vers le stockage 
 persistentManager.deserializeError=Erreur lors de la désérialisation de la session [{0}]
 persistentManager.isLoadedError=Erreur en vérifiant si la session [{0}] est chargée en mémoire
 persistentManager.loading=Chargement de [{0}] sessions persistantes
+persistentManager.noStore=Aucun stockage (Store) n'a été configuré, la persistence est désactivée
 persistentManager.removeError=Erreur en enlevant la session [{0}] du stockage
 persistentManager.serializeError=Erreur lors de la sérialisation de la session [{0}] : [{1}]
 persistentManager.storeClearError=Erreur en supprimant toutes les sessions du stockage
@@ -63,10 +65,12 @@ persistentManager.tooManyActive=Trop de sessions actives, [{0}], à la recherche
 persistentManager.unloading=Sauvegarde de [{0}] sessions persistantes
 
 standardManager.deletePersistedFileFail=Impossible de supprimer [{0}] après avoir lu les sessions persistées, cela pourrait empêcher la future persistance des sessions
+standardManager.expiringSessions=Expiration de [{0}] sessions persistées
 standardManager.loading=Chargement des sessions qui ont persisté depuis [{0}]
 standardManager.loading.exception="Exception" lors du chargement de sessions persistantes
 standardManager.managerLoad=Exception au chargement des sessions depuis le stockage persistant (persistent storage)
 standardManager.managerUnload=Exception au déchargement des sessions vers le stockage persistant (persistent storage)
+standardManager.noFile=Le fichier de données de persistence [{0}] n''a pas été trouvé
 standardManager.unloading=Sauvegarde des sessions ayant persisté vers [{0}]
 standardManager.unloading.debug=Déchargement des session persistées
 standardManager.unloading.nosessions=Aucune session persistée à décharger
@@ -92,3 +96,7 @@ standardSession.sessionEvent=L'écouteur d'évènement de session (session event
 standardSession.setAttribute.iae="setAttribute" : Attribut [{0}] non sérialisable
 standardSession.setAttribute.ise="setAttribute" : Session déjà invalidée
 standardSession.setAttribute.namenull="setAttribute" : le nom de paramètre ne peut être nul
+
+store.expireFail=Erreur de traitement de l''expiration de la session pour la clé [{0}]
+store.keysFail=Erreur lors de la récupération des clés
+store.removeFail=Erreur lors du retrait de la clé [{0}]
