--- a/java/org/apache/tomcat/util/buf/LocalStrings_ja.properties
+++ b/java/org/apache/tomcat/util/buf/LocalStrings_ja.properties
@@ -32,6 +32,9 @@ hexUtils.fromHex.oddDigits=入力は、偶数の16進数で構成する必要が
 
 messageBytes.illegalCharacter=コードポイント [{1}] のユニコード文字 [{0}] は有効範囲 0 から 255 の範囲外のため、エンコードできません。
 
+stringCache.byteTime=ByteCache 生成時間: {0}ms
+stringCache.charTime=CharCache 生成時間: {0}ms
+
 uDecoder.eof=予期せぬ場所で終端に達しました。
 uDecoder.isHexDigit=16進エンコーディングが無効です
 uDecoder.noSlash="/" を符号化して含めることはできません。
