--- a/java/org/apache/tomcat/util/http/LocalStrings_ja.properties
+++ b/java/org/apache/tomcat/util/http/LocalStrings_ja.properties
@@ -37,6 +37,7 @@ parameters.maxCountFail.fallToDebug=\n\
 parameters.multipleDecodingFail=文字のデコードに失敗しました。 合計[{0}]個の障害が検出されましたが、最初のものだけが記録されました。 このロガーがすべての失敗を記録するためにはデバッグレベルのロギングを有効にします。
 parameters.noequal=[{2}] の値で [{0}] の位置から [{1}] の位置で終了するパラメータには、''=''文字が続いていませんでした
 
+rfc6265CookieProcessor.expectedBytes=Cookie を文字列として解析中、期待されるバイト数
 rfc6265CookieProcessor.invalidAttributeName=このCookieに無効な属性名 [{0}] が指定されました
 rfc6265CookieProcessor.invalidAttributeValue=このCookie属性 [{0}] に無効な属性値 [{1}] が指定されました
 rfc6265CookieProcessor.invalidCharInValue=無効な文字[{0}]がCookie値に存在します。
