Improvements to French translations. (remm)

--- a/java/org/apache/jasper/resources/LocalStrings_fr.properties
+++ b/java/org/apache/jasper/resources/LocalStrings_fr.properties
@@ -15,6 +15,7 @@
 
 jasper.error.emptybodycontent.nonempty=D''après la TLD, le tag [{0}] doit être vide, mais ne l''est pas
 
+jsp.compiled=Compilé [{0}] en {1}ms
 jsp.engine.info=Moteur Jasper JSP {0}
 jsp.error.URLMustStartWithSlash=Le chemin [{0}] doit commencer par un caractère slash
 jsp.error.action.isnottagfile=L''action [{0}] ne peut être utilisée que dans un fichier tag
@@ -55,6 +56,7 @@ jsp.error.compilation.jdtProblemError=Erreur lors du traitement de la liste des 
 jsp.error.compilation.source=Erreur lors du chargement du fichier source [{0}]
 jsp.error.compiler=Aucun compilateur Java disponible
 jsp.error.compiler.config=Aucun compilateur Java disponible pour les options de configuration compilerClassName : [{0}] et compiler : [{1}]
+jsp.error.compiler.missingResource=Problème d'accès à la ressource, elle sera traitée comme périmée
 jsp.error.config_pagedir_encoding_mismatch=L''encode de page (Page-encoding) indiqué dans le jsp-property-group [{0}] est différent de celui indiqué dans la directive de page [{1}]
 jsp.error.corresponding.servlet=Erreur de servlet générée :
 jsp.error.could.not.add.taglibraries=Impossible d'ajouter une ou plusieurs bibliothèques de tag.
@@ -75,6 +77,7 @@ jsp.error.el_interpreter_class.instantiation=Impossible de charger ou d''instanc
 jsp.error.fallback.invalidUse=jsp:fallback doit être un enfant direct de jsp:plugin
 jsp.error.file.already.registered=Inclusion récursive du fichier [{0}]
 jsp.error.file.cannot.read=Impossible de lire le fichier : [{0}]
+jsp.error.file.close=Erreur lors de la fermeture du lecteur
 jsp.error.file.not.found=Le fichier [{0}] n''a pas été trouvé
 jsp.error.flush=Une exception s'est produite lors de l'envoi des données
 jsp.error.fragmentwithtype=On ne peut indiquer à la fois les attributs ''fragment'' et ''type''.  Si ''fragment'' est présent, ''type'' est fixé comme ''{0}''
@@ -237,6 +240,7 @@ jsp.error.tld.unable_to_get_jar=Impossible d''obtenir la ressource [{0}] du JAR 
 jsp.error.tld.url=Mauvaise URL de TLD [{0}]
 jsp.error.tlv.invalid.page=Message d''erreurs de validation provenant du TagLibraryValidator pour [{0}] en [{1}]
 jsp.error.tlvclass.instantiation=Impossible de charger ou d''instancier la classe TagLibraryValidator : [{0}]
+jsp.error.typeConversion=Erreur de la conversion de [{0}] en {1}
 jsp.error.unable.compile=Impossible de compiler la classe pour la JSP
 jsp.error.unable.deleteClassFile=Impossible de supprimer le fichier de classe [{0}]
 jsp.error.unable.getType=Impossible d''extraire un type de [{0}]
@@ -310,6 +314,7 @@ jsp.warning.unsupported.sourceVM=La VM source [{0}] demandée n''est pas support
 jsp.warning.unsupported.targetVM=La VM cible [{0}] demandée n''est pas supportée, [{1}] sera utilisé
 jsp.warning.xpoweredBy=WARNING : Valeur invalide pour le paramètre d'initialisation xpoweredBy, la valeur par défaut "false" sera utilisée
 
+jspc.built=Le fichier [{0}] a été compilé
 jspc.delete.fail=Impossible d''effacer le fichier [{0}]
 jspc.error.compilation=Erreur de compilation
 jspc.error.fileDoesNotExist=Le fichier [{0}] donné en argument n''existe pas
@@ -320,8 +325,12 @@ jspc.error.minThreadCount=Il doit y avoir au moins un thread [{0}]
 jspc.error.parseThreadCount=Impossible d''analyser le nombre de threads [{0}]
 jspc.error.unknownOption=Option [{0}] non reconnue, utiliser -help pour obtenir de l''aide
 jspc.errorCount=Nombre d''erreurs : [{0}]
+jspc.generatingMapping=Génération du mapping web pour le fichier [{0}] en utilisant le contexte de compilation [{1}]
 jspc.generation.result=La génération s''est terminée avec [{0}] erreurs en [{1}] millisecondes
 jspc.implicit.uriRoot=uriRoot réglé implicitement à [{0}]
+jspc.outdated=[{0}] est périmé et est compilé
+jspc.processing=Traitement du fichier [{0}]
+jspc.start=L''exécution démarre pour {0} pages
 jspc.usage=Utilisation : jspc <options> [--] <fichiers jsp>\n\
 où les fichiers jsp sont soit\n\
 \    -webapp <dir>         Un répertoire contenant une application web, toutes les pages jsp\n\
