--- a/java/org/apache/tomcat/util/net/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/util/net/LocalStrings_fr.properties
@@ -52,7 +52,7 @@ endpoint.apr.errApplyConf=Impossible d'appliquer OpenSSLConf au contexte SSL
 endpoint.apr.errCheckConf=Erreur pendant la vérification de OpenSSLConf
 endpoint.apr.errMakeConf=Impossible de créer le contexte de OpenSSLConf
 endpoint.apr.failSslContextMake=Incapable de créer un SSLContext. Vérifier que SSLEngine est activé dans l'AprLifecycleListener, que l'AprLifecycleListener a été correctement initialisé et qu'un protocole SSL valide a été spécifié.
-endpoint.apr.invalidSslProtocol=Un valeur invalide [{0}] a été donnée pour l''attribut SSLProtocol
+endpoint.apr.invalidSslProtocol=La valeur invalide [{0}] a été fournie pour l''attribut SSLProtocol
 endpoint.apr.maxConnections.running=La terminaison APR ne permet pas de fixer maxConnections pendant son exécution, la valeur existante [{0}] continuera à être utilisée
 endpoint.apr.maxConnections.unlimited=La terminaison APR ne supporte pas un nombre illimité de connections, la valeur existante [{0}] va continuer à être utilisée
 endpoint.apr.noSendfileWithSSL=Sendfile n'est pas supporté avec le connecteur APR lorsque SSL est active
