--- a/java/org/apache/catalina/tribes/transport/nio/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/tribes/transport/nio/LocalStrings_fr.properties
@@ -16,7 +16,9 @@
 nioReceiver.alreadyStarted=ServerSocketChannel est déjà démarré
 nioReceiver.cleanup.fail=Impossible de nettoyer lors de la fermeture du sélecteur
 nioReceiver.clientDisconnect=Le client de réplication est déconnecté, erreur lors du "polling" de clé. Le client est ignoré.
+nioReceiver.closeError=Erreur de fermeture
 nioReceiver.eventsError=Erreur lors du traitement des évènements
+nioReceiver.noThread=Aucun TcpReplicationThread n'est disponible
 nioReceiver.requestError=Impossible de traiter la requête dans NioReceiver
 nioReceiver.run.fail=Impossible d'exécuter l'écouteur de réplication
 nioReceiver.start.fail=Incapable de démarrer le récepteur de cluster
@@ -25,6 +27,7 @@ nioReceiver.stop.threadRunning=Le thread NioReceiver ne s'est pas arrêté suffi
 nioReceiver.threadpool.fail=Le ThreadPool n'a pas pu être initialisé. Le Listener n'a pas démarré.
 nioReceiver.threadsExhausted=La clé du canal est enregistrée mais n''a pas reçue d''opérations qui l''intéressaient depuis [{0}] ms (annulé : [{1}]) : [{2}] dernier accès : [{3}] cause possible : tous les threads sont utilisés, effectuez un dump des threads
 
+nioReplicationTask.disconnect=Le canal a été fermé sur l'hôte distant, déconnection
 nioReplicationTask.error.register.key=Erreur lors de l''enregistrement de la clé en lecture : [{0}]
 nioReplicationTask.exception.drainChannel=Erreur rencontrée dans TcpReplicationThread.drainChannel
 nioReplicationTask.process.clusterMsg.failed=Le traitement du message du cluster a échoué
