Improvements to Japanese translations by tak7iji.

--- a/java/org/apache/tomcat/websocket/LocalStrings_ja.properties
+++ b/java/org/apache/tomcat/websocket/LocalStrings_ja.properties
@@ -55,6 +55,7 @@ transformerFactory.unsupportedExtension=未対応の拡張 [{0}] です。
 
 util.invalidMessageHandler=提供されたメッセージハンドラにonMessage(Object)メソッドがありません
 util.invalidType=値[{0}]をタイプ [{1}] に強制できません。このタイプはサポートされていません。
+util.invalidValue=値 [{0}] は区切り文字を含んでいます
 util.notToken=パラメーター名 [{0}]、値 [{1}] の不正な拡張パラメーターが指定されました。
 util.unknownDecoderType=デコーダタイプ [{0}] は認識されません
 
