More French translations (remm)

--- a/java/org/apache/catalina/tribes/group/interceptors/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/tribes/group/interceptors/LocalStrings_fr.properties
@@ -59,6 +59,7 @@ tcpFailureDetector.heartbeat.failed=Incapable de faire une pulsation ("heatbeat"
 tcpFailureDetector.member.disappeared=La vérfication est complète, le membre a disparu [{0}]
 tcpFailureDetector.memberDisappeared.verify=Reçu un message memberDisappeared[{0}], qui sera vérifié
 tcpFailureDetector.performBasicCheck.memberAdded=Le membre a été ajouté bien qu''aucune notification n''ait été reçue : [{0}]
+tcpFailureDetector.recievedPacket=Réception d''un paquet de détection d''échec [{0}]
 tcpFailureDetector.still.alive=Vérification terminée. Le membre [{0}] vit toujours
 tcpFailureDetector.suspectMember.alive=Membre suspect, confirmé vivant.[{0}]
 tcpFailureDetector.suspectMember.dead=Un membre suspect a été confirmé mort [{0}]
