--- a/java/org/apache/tomcat/util/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/util/LocalStrings_fr.properties
@@ -13,6 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+diagnostics.deadlockFound=Un point de verrouillage a été trouvé entre les deux fils d'exécution suivants:
+diagnostics.setPropertyFail=Impossible de définir [{0}] en [{1}], [{2}] a été obtenu à la place
 diagnostics.threadDumpTitle=Traces complètes des threads
 diagnostics.vmInfoClassCompilation=Compilation de la classe
 diagnostics.vmInfoClassLoading=Chargeur de classes
