--- a/java/org/apache/catalina/startup/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/startup/LocalStrings_fr.properties
@@ -27,6 +27,7 @@ connector.noSetSSLImplementationName=Le connecteur [{0}] ne supporte pas le chan
 
 contextConfig.altDDNotFound=fichier alt-dd [{0}] pas trouvé
 contextConfig.annotationsStackOverflow=Impossible de finir l''analyse des annotations de l''application web [{0}] à cause d''une StackOverflowError, les causes possibles sont une valeur trop petite pour -Xss et des dépendances d''héritage cycliques ; la hiérarchie de classe qui était traitée était [{1}]
+contextConfig.antiLocking=L''anti verrouillage de fichiers pour le contexte [{0}] change docBase en [{1}]
 contextConfig.applicationMissing=Le fichier web.xml de l'application est absent, utilisation des paramètres par défaut
 contextConfig.applicationParse=Erreur d''évaluation (parse) dans le fichier web.xml de l''application à [{0}]
 contextConfig.applicationPosition=S''est produite à la ligne [{0}] colonne [{1}]
@@ -57,9 +58,11 @@ contextConfig.jspFile.error=Le fichier JSP [{0}] doit commencer par un ''/''
 contextConfig.jspFile.warning=WARNING : Le fichier JSP [{0}] doit commencer par un  ''/'' dans l''API Servlet 2.4
 contextConfig.missingRealm=Aucun royaume (realm) n'a été configuré pour réaliser l'authentification
 contextConfig.noAntiLocking=La valeur [{0}] configurée pour java.io.tmpdir ne correspond pas à un répertoire valide, le paramètre antiResourceLocking configuré pour l''application [{1}] sera ignoré
+contextConfig.noJsp=Le groupe de propriétés JSP pour l''URL [{0}] sera sauté, le Servlet JSP avec le nom [{1}] n''a pas été trouvé
 contextConfig.processAnnotationsDir.debug=Balayage du répertoire pour trouver des fichiers de classe avec annotations [{0}]
 contextConfig.processAnnotationsJar.debug=Analyse du fichier jars pour des classes annotées avec [{0}]
 contextConfig.processAnnotationsWebDir.debug=Balayage du répertoire d''applications web, pour fichiers de classe avec annotations [{0}]
+contextConfig.processContext=Traitement du contexte [{0}] avec la configuration [{1}]
 contextConfig.resourceJarFail=Echec du traitement du JAR trouvé à l''URL [{0}] pour les ressources statiques qui devront être incluses dans le contexte avec le nom [{1}]
 contextConfig.role.auth=Le nom de rôle de sécurité [{0}] est utilisé dans un <auth-constraint> sans avoir été défini dans <security-role>
 contextConfig.role.link=Le nom de rôle de sécurité [{0}] est utilisé dans un <role-link> sans avoir été défini dans <security-role>
@@ -95,6 +98,7 @@ hostConfig.cce=L''objet donnée évènement cycle de vie (Lifecycle event data o
 hostConfig.context.remove=Erreur en enlevant le contexte [{0}]
 hostConfig.context.restart=Erreur pendant le redémarrage du contexte [{0}]
 hostConfig.createDirs=Impossible de créer un répertoire pour le déploiement : [{0}]
+hostConfig.delete=Suppression de la ressource [{0}] lors du rechargement de l''application
 hostConfig.deploy.error=Exception lors du déploiement du répertoire [{0}] de l''application web
 hostConfig.deployDescriptor=Déploiement du descripteur de configuration [{0}]
 hostConfig.deployDescriptor.blocked=L''application web dont le chemin est [{0}] n''a pas été déployée car elle contenait un descripteur de déploiement [{1}] qui pourrait inclure de la configuration nécessaire pour le déploiement sécurisé de l''application mais ce traitement est empêché par le paramètre deployXML pour cet hôte, un descripteur approprié devrait être crée à [{2}] pour déployer cette application
@@ -139,6 +143,7 @@ tomcat.baseDirMakeFail=Impossible de créer le répertoire [{0}] pour utiliser c
 tomcat.baseDirNotDir=L''emplacement [{0}] spécifié comme répertoire de base n''est pas un répertoire
 tomcat.defaultMimeTypeMappingsFail=Impossible de charger les types MIME par défaut
 tomcat.homeDirMakeFail=Impossible de créer le répertoire [{0}] pour l''utiliser comme répertoire d''origine
+tomcat.noWrapper=Echec de la création de l'enrobeur (wrapper)
 
 userConfig.database=Exception lors du chargement de la base de données utilisateur
 userConfig.deploy=Déploiement de l''application web pour l''utilisateur [{0}]
