--- a/java/org/apache/tomcat/util/LocalStrings_ja.properties
+++ b/java/org/apache/tomcat/util/LocalStrings_ja.properties
@@ -13,6 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+diagnostics.deadlockFound=次のスレッド間でデッドロックが検出されました:
+diagnostics.setPropertyFail=[{0}] を [{1}] に設定できませんでした。代わりに [{2}] を取得しました
 diagnostics.threadDumpTitle=完全なスレッドダンプ
 diagnostics.vmInfoClassCompilation=Class コンパイル
 diagnostics.vmInfoClassLoading=クラスローディング
